--- a/__workshop/exercise-6/index.html
+++ b/__workshop/exercise-6/index.html
@@ -9,18 +9,18 @@
   </head>
 
   <body>
-    <h1>Animals</h1>
+    <h1>ANIMALS</h1>
     <ul class="row">
       <li class="col">
-        <h2>A cat</h2>
+        <h2>A CAT</h2>
         <img class="image" src="imgs/cat.jpg" alt="A cat" />
       </li>
       <li class="col">
-        <h2>A dog</h2>
+        <h2>A DOG</h2>
         <img class="image" src="imgs/dog.jpg" alt="A dog" />
       </li>
       <li class="col">
-        <h2>An alpaca</h2>
+        <h2>AN ALPACA</h2>
         <img class="image" src="imgs/alpaca.jpg" alt="An alpaca" />
       </li>
     </ul>
