--- a/__workshop/exercise-7/index.html
+++ b/__workshop/exercise-7/index.html
@@ -7,12 +7,97 @@
     />
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
-
   <body>
     <h1>Animals</h1>
-    <section class="section">
+
+    <section class="sectionCute">
       <h2>Cute Animals</h2>
       <!-- Complete the file... -->
+
+      <ul class="rowOne">
+        <li>
+          <div class="cats">
+            <h3>CATS</h3>
+            <img class="cuteAnimals" src="./imgs/cat.jpg" alt="A Cat" />
+            <img class="cuteAnimals" src="./imgs/cat2.jpeg" alt="A Cat" />
+          </div>
+        </li>
+
+        <li>
+          <div class="dogs">
+            <h3>DOGS</h3>
+            <img class="cuteAnimals" src="./imgs/dog.jpg" alt="A Dog" />
+            <img class="cuteAnimals" src="./imgs/dog2.jpg" alt="A Dog" />
+          </div>  
+        </li>
+
+        <li>
+          <div class="alpaca">
+            <h3>AN ALPACA</h3>
+            <img class="cuteAnimals" src="./imgs/alpaca.jpg" alt="An Alpaca" />
+          </div>
+        </li>
+      </ul>
+
     </section>
+
+    <section class="sectionBig">
+      <h2>BIG ANIMALS</h2>
+
+      <ul class="rowTwo">
+        <li>
+          <div class="elephant">
+            <h3>AN ELEPHANT</h3>
+            <img class="bigAnimals" src="./imgs/elephant.jpg" alt="An elephant" />
+          </div>
+        </li>
+
+        <li>
+          <div class="giraffe">
+            <h3>A GIRAFFE</h3>
+            <img class="bigAnimals" src="./imgs/giraffe.jpg" alt="A Giraffe" />
+          </div>
+        </li>
+
+        <li>
+          <div class="whales">
+            <h3>A WHALE AND HER BABY</h3>
+            <img class="bigAnimals" src="./imgs/whale.jpg" alt="A Whale and her Baby" />
+          </div>
+        </li>
+      </ul>
+
+    </section>
+
+    <section class="sectionInsect">
+
+      <h2>INSECTS</h2>
+
+      <ul class="rowThree">
+        <li>
+          <div class="firefly">
+            <h3>A FIREFLY</h3>
+            <img class="insect" src="./imgs/firefly.jpg" alt="A Firefly" />
+          </div>
+        </li>
+
+        <li>
+          <div class="ladybug">
+            <h3>A LADYBUG</h3>
+            <img class="insect" src="./imgs/ladybug.jpg" alt="A Ladybug" />
+          </div>
+        </li>
+
+        <li>
+          <div class="butterfly">
+            <h3>A BUTTERFLY</h3>
+            <img class="insect" src="./imgs/butterfly.jpg" alt="A Butterfly" />
+          </div>
+        </li>
+
+      </ul>
+
+    </section>
+
   </body>
 </html>
